# chain-release

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  README.tpl.md  mypy.ini  pyproject.toml  ruff.toml  tox.ini
builder/: container.py  docs.py  release.py  settings.py  snapshot.py  version.py
docker/: docker-compose.yaml  dockerfile
docs/source/: conf.py  index.rst
docs/source/apis/: template.rst
requirements/: ansible.txt  dev.txt  docs.txt
src/: main.py
src/chain/: __init__.py  settings.py
src/chain/chaser_server/: metric.proto  metric_pb2.py  metric_pb2_grpc.py  server.py
src/chain/configs/: custom.yaml
src/chain/core/: chaser.py  email.py  git.py  mattermost.py  setup.py
src/chain/hydra/: __init__.py  main.py  param.py  upload.py
src/chain/optuna/: __init__.py  artifacts.py  storages.py
src/chain/server/docker/: docker-compose.yaml
src/chain/server/docker/chain/: dockerfile
src/chain/server/docker/chain/app/: app.py
src/chain/server/docker/chain/app/src/: engine.py  orm.py  webui.py
src/chain/server/docker/chain/app/templates/: index.html
src/chain/server/docker/chaser/: dockerfile
src/chain/server/docker/chaser/app/: app.py
src/chain/server/docker/chaser/app/assets/: style.css
src/chain/server/docker/chaser/app/src/: engine.py  layout.py  orm.py  plot.py
src/chain/server/docker/mlflow/: dockerfile
src/chain/server/docker/optuna/: dockerfile
src/chain/server/docker/optuna/app/: app.py
src/chain/server/k8s/: docker-compose.yaml
src/chain/server/k8s/chain-server/: Chart.yaml  values.yaml
src/chain/server/k8s/chain-server/templates/: deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/chain/server/k8s/chain-service/: Chart.yaml  values.yaml
src/chain/server/k8s/chain-service/templates/: deployment.yaml  service.yaml
src/chain/templates/: MLproject.j2  html.j2  sample.md.j2
src/configs/: sample.yaml
src/test/: sample.csv.dvc
tests/: test_sample.py
